--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,11 +44,7 @@ layout: main
     <section id="grid" class="row flex-grid">
         {% for post in posts offset: offset %}
             <article class="box-item">
-                <span class="category">
-                    <a href="{{ site.baseurl }}/{{ site.categories_folder | default: 'category' }}/{{ post.category }}">
-                        <span>{{ post.category }}</span>
-                    </a>
-                </span>
+                
                 <div class="box-body">
                     <a class="cover" href="{{ post.url | prepend: site.baseurl }}">
                         {% include loader.html %}
@@ -71,12 +67,8 @@ layout: main
                         {% include new-post-tag.html date=post.date %}
                         {% include read-icon.html %}
                     </a>
-                    <div class="box-info">
-                        <div class="date">
-                    <a href="{{ site.baseurl }}/{{ site.categories_folder | default: 'category' }}/{{ post.category }}">
-                       {{ post.category }}
-                    </a>
-                        </div>
+                    <div class="box-info" style=" border-radius: 10px; background: black; ">
+                        
                         <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
                             <h2 class="post-title">
                                 {{ post.title }}
