--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,14 +49,14 @@ layout: main
                     <a class="cover" href="{{ post.url | prepend: site.baseurl }}">
                         {% include loader.html %}
                         {% if post.optimized_image %}
-                            <img style="border-radius: 10px;" src="/assets/img/placeholder.png" width="100%" data-url="{{ post.optimized_image }}" class="preload">
+                            <img style="border-radius: 10px 10px 0px 0px;" src="/assets/img/placeholder.png" width="100%" data-url="{{ post.optimized_image }}" class="preload">
                             <noscript>
-                                <img style="border-radius: 10px;" src="{{ post.optimized_image }}" width="100%">
+                                <img style="border-radius: 10px 10px 0px 0px;" src="{{ post.optimized_image }}" width="100%">
                             </noscript>
                         {% elsif post.image %}
-                            <img style="border-radius: 10px;" src="/assets/img/placeholder.png" width="100%" data-url="{{ post.image }}" class="preload">
+                            <img style="border-radius: 10px 10px 0px 0px;" src="/assets/img/placeholder.png" width="100%" data-url="{{ post.image }}" class="preload">
                             <noscript>
-                                <img style="border-radius: 10px;" src="{{ post.image }}" width="100%">
+                                <img style="border-radius: 10px 10px 0px 0px;" src="{{ post.image }}" width="100%">
                             </noscript>
                         {% else %}
                             <img src="/assets/img/placeholder.png" width="100%" data-url="/assets/img/off.jpg" class="preload">
@@ -67,7 +67,7 @@ layout: main
                         {% include new-post-tag.html date=post.date %}
                         {% include read-icon.html %}
                     </a>
-                    <div class="box-info" style=" border-radius: 10px; background: black; ">
+                    <div class="box-info" style=" border-radius: 0px 0px 10px 10px; background: black; ">
                         
                         <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
                             <h2 class="post-title">
