--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -70,7 +70,7 @@ layout: main
                     <div class="box-info" style=" border-radius: 0px 0px 10px 10px; background: black; ">
                         
                         <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-                            <h2 class="post-title">
+                            <h2 class="post-titcle" style="font-size: 20px;text-transform: capitalize;font-family: unset;font-weight: 500;">
                                 {{ post.title }}
                             </h2>
                         </a>
