--- a/_includes/read-icon.html
+++ b/_includes/read-icon.html
@@ -1,3 +1,5 @@
 <div class="read-icon">
-    <svg><use xlink:href="#icon-read"></use></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 455 455" style="" xml:space="preserve">
+<path d="M227.5,0C101.855,0,0,101.855,0,227.5S101.855,455,227.5,455S455,353.145,455,227.5S353.145,0,227.5,0z M166.062,321.575  V133.425L328.938,227.5L166.062,321.575z"/>
+</svg>
 </div>
