--- a/_includes/read-icon.html
+++ b/_includes/read-icon.html
@@ -1,5 +1,15 @@
 <div class="read-icon">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 455 455" style="" xml:space="preserve">
-<path d="M227.5,0C101.855,0,0,101.855,0,227.5S101.855,455,227.5,455S455,353.145,455,227.5S353.145,0,227.5,0z M166.062,321.575  V133.425L328.938,227.5L166.062,321.575z"/>
+   <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="256" y1="514" x2="256" y2="2" gradientTransform="matrix(1 0 0 -1 0 514)">
+	<stop  offset="0" style="stop-color:#2AF598"/>
+	<stop  offset="1" style="stop-color:#009EFD"/>
+</linearGradient>
+<path style="fill:url(#SVGID_1_);" d="M256,512c-68.38,0-132.667-26.629-181.02-74.98C26.629,388.667,0,324.38,0,256
+	S26.629,123.333,74.98,74.98C123.333,26.629,187.62,0,256,0s132.667,26.629,181.02,74.98C485.371,123.333,512,187.62,512,256
+	s-26.629,132.667-74.98,181.02C388.667,485.371,324.38,512,256,512z M256,40C136.897,40,40,136.897,40,256s96.897,216,216,216
+	s216-96.897,216-216S375.103,40,256,40z M165,390.562V121.438L399.138,256L165,390.562z M205,190.562v130.877L318.862,256
+	L205,190.562z"/>
+
 </svg>
 </div>
