--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,23 +8,9 @@
 
         <section class="post {% if site.two_columns_layout %}two-columns{% else %}one-column{% endif %}">
             <article role="article" class="post-content">
-                <p class="post-info">
-                    {% if page.date %}
-                        <svg class="icon-calendar" id="date"><use xlink:href="#icon-calendar"></use></svg>
-                        <time class="date" datetime="{{ page.date | date_to_xmlschema }}">
-                            {% include date.html date=page.date %}
-                        </time>
-                    {% endif %}
-                    <svg id="clock" class="icon-clock"><use xlink:href="#icon-clock"></use></svg>
-                    <span>{{ minutesText }}</span>
-                </p>
                 <h1 class="post-title">{{ page.title }}</h1>
-                <p class="post-subtitle">{{ page.subtitle }}</p>
-
-                {% if page.image and paginator.activated == nil %}
-                    <img src="{{ page.image }}" alt="Featured image" class="post-cover">
-                {% endif %}
-
+                <p class="post-subtitle">{{ page.category }} {{ page.subtitle }}</p>
+                
                 {% include pagination-post.html progressBar=true %}
 
                 {% include toc.html %}
@@ -36,21 +22,21 @@
 
             {% if site.two_columns_layout %}
                 <aside class="see-also">
-                    <h2>{{ site.translations.text.see_also | default: "See also" }}</h2>
+                    <h2>{{ site.translations.text.see_also | default: "Must Watch" }}</h2>
                     <ul>
                         {% assign next_posts = site.posts | where_exp:"post","post.is_generated != true" | where_exp:"post","post.path != page.path" %}
                         {% assign shuffled_array = next_posts | shuffle %}
-                        {% for post in shuffled_array limit:3 %}
-                            <li>
+                        {% for post in shuffled_array limit:5 %}
+                            <li style=" background: black; border-radius: 10px;">
                                 <a href="{{ post.url | prepend: site.baseurl }}">
                                     {% if post.optimized_image %}
-                                        <img src="{{ post.optimized_image }}">
+                                        <img style=" border-radius: 10px;" src="{{ post.optimized_image }}">
                                     {% elsif post.image %}
-                                        <img src="{{ post.image }}">
+                                        <img style=" border-radius: 10px;" src="{{ post.image }}">
                                     {% else %}
-                                        <img src="/assets/img/off.jpg">
+                                        <img style=" border-radius: 10px;" src="/assets/img/off.jpg">
                                     {% endif %}
-                                    <h3>{{ post.title }}</h3>
+                                    <h3 style=" color: white; padding: 10px;" >{{ post.title }}</h3>
                                 </a>
                             </li>
                         {% endfor %}
