--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,13 @@
         <section class="post {% if site.two_columns_layout %}two-columns{% else %}one-column{% endif %}">
             <article role="article" class="post-content">
                 <h1 class="post-title">{{ page.title }}</h1>
-                <p class="post-subtitle">{{ page.category }} {{ page.subtitle }}</p>
+                <p class="post-subtitle">{{ page.category }}</p>
+                
+<div class="post-cover">
+ <video class="afterglow" id="myvideo" width="" height="auto">
+ <source type="video/mp4" src="{{ page.subtitle }}" />
+ </video>
+ </div>
                 
                 {% include pagination-post.html progressBar=true %}
 
