--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -83,27 +83,17 @@
 </tbody>
 </table>
                 <center>
-                    <h2>Download {{ page.seotitle }}<h2>
+                    <h2>Download {{ page.seotitle }}</h2>
                     <a href="#" class="myButton">Download in 200MB</a>
-                        <br></br>
                          <a href="#" class="myButton">Download in 250MB</a>
-                        <br></br>
                          <a href="#" class="myButton">Download in 300MB</a>
-                        <br></br>
                          <a href="#" class="myButton">Download in 350MB</a>
-                        <br></br>
                          <a href="#" class="myButton">Download in 400MB</a>
-                        <br></br>
                          <a href="#" class="myButton">Download in 450MB</a>
-                        <br></br>
                         <a href="#" class="myButton">Download in 500MB</a>
-                        <br></br>
                     <a href="#" class="myButton">Download in 700MB</a>
-                        <br></br>
                     <a href="#" class="myButton">Download in 1GB</a>
-                        <br></br>
                     <a href="#" class="myButton">Download in 2GB</a>
-                        <br></br>
 
                         
                 </center>
