--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -84,16 +84,16 @@
 </table>
                 <center>
                     <h2>Download {{ page.seotitle }}</h2>
-                    <a href="#" class="myButton">Download in 200MB</a>
-                         <a href="#" class="myButton">Download in 250MB</a>
-                         <a href="#" class="myButton">Download in 300MB</a>
-                         <a href="#" class="myButton">Download in 350MB</a>
-                         <a href="#" class="myButton">Download in 400MB</a>
-                         <a href="#" class="myButton">Download in 450MB</a>
-                        <a href="#" class="myButton">Download in 500MB</a>
-                    <a href="#" class="myButton">Download in 700MB</a>
-                    <a href="#" class="myButton">Download in 1GB</a>
-                    <a href="#" class="myButton">Download in 2GB</a>
+                    <a href="//stawhoph.com/afu.php?zoneid=3762702" style=" color: white; " class="myButton">Download in 200MB</a>
+                         <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 250MB</a>
+                         <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 300MB</a>
+                         <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 350MB</a>
+                         <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 400MB</a>
+                         <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 450MB</a>
+                        <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 500MB</a>
+                    <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 700MB</a>
+                    <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 1GB</a>
+                    <a href="//stawhoph.com/afu.php?zoneid=3762702" style="color: white;" class="myButton">Download in 2GB</a>
 
                         
                 </center>
