--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,13 +49,12 @@
     <script src="https://hunzaboy.github.io/Ckin-Video-Player/dist/js/ckin.js"></script>
                 
                 <table class="tg">
-<thead>
-  <tr>
-    <th class="tg-0lax">Name</th>
-    <th class="tg-0lax">{{ page.seotitle }}</th>
-  </tr>
-</thead>
+
 <tbody>
+  <tr> 
+    <td class="tg-0lax">Name</td>
+    <td class="tg-0lax">{{ page.seotitle }}</td>
+  </tr>
   <tr>
     <td class="tg-0lax">Year</td>
     <td class="tg-0lax">{{ page.year }}</td>
