--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@
             <article role="article" class="post-content">
                 <h1 class="post-title">{{ page.seotitle}}</h1>
                 
-<video autoplay poster="{{ page.poster }}" src="{{ page.video }}" data-ckin="default"></video>
+<video data-color="red" autoplay poster="{{ page.poster }}" src="{{ page.video }}" data-ckin="default"></video>
 
     <script src="https://hunzaboy.github.io/Ckin-Video-Player/dist/js/ckin.js"></script>
                 
