--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -13,18 +13,18 @@
                         {% if post.category == page.slug %}
                             <article class="box-item">
                                 <div class="box-body">
-                                    {% if post.image %}
+                                    {% if post.poster %}
                                         <a class="cover" href="{{ post.url | prepend: site.baseurl }}">
                                             {% include loader.html %}
-                                            {% if post.optimized_image %}
-                                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.optimized_image }}" class="preload">
+                                            {% if post.poster %}
+                                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.poster }}" class="preload">
                                                 <noscript>
-                                                    <img src="{{ post.optimized_image }}" width="100%">
+                                                    <img src="{{ post.poster }}" width="100%">
                                                 </noscript>
                                             {% elsif post.image %}
-                                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.image }}" class="preload">
+                                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.poster }}" class="preload">
                                                 <noscript>
-                                                    <img src="{{ post.image }}" width="100%">
+                                                    <img src="{{ post.poster }}" width="100%">
                                                 </noscript>
                                             {% else %}
                                                 <img src="/assets/img/placeholder.png" width="100%" data-url="/assets/img/off.jpg" class="preload">
