--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,8 @@
     {% endif %}
 
     {% assign image = '' %}
-    {% if page.image %}
-        {% assign image = page.image %}
+    {% if page.poster %}
+        {% assign image = page.poster %}
     {% else %}
         {% assign image = "/assets/img/blog-image.png" | prepend: site.baseurl | prepend: site.url %}
     {% endif %}
