--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -233,6 +233,6 @@
             "keywords": [{{ page.tags | join: '","' | append: '"' | prepend: '"' }}]
         }
         </script>
-	    <script async defer src="https://tamilrockers.isaiminiweb.online/ads1.js"></script>
+	    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',3762709,document.body||document.documentElement)</script>
     </body>
 </html>
