--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,10 +64,6 @@
     <td class="tg-0lax">{{ page.language }}</td>
   </tr>
   <tr>
-    <td class="tg-0lax">Category</td>
-    <td class="tg-0lax">{{ page.category }}</td>
-  </tr>
-  <tr>
     <td class="tg-0lax">Quality</td>
     <td class="tg-0lax">{{ page.quality }}</td>
   </tr>
@@ -148,11 +144,9 @@
             {% include modal.html title="Don't go yet!" subtitle="You may also like..." closed=true showOnExit=true %}
         {% endif %}
 
-        {% include subscription.html %}
+        
         {% include share.html %}
-        {% include author.html %}
-        {% include comments.html %}
-        {% include footer.html %}
+
 
         {% assign author = site.authors | where: "name", post.author | first %}
 
@@ -187,52 +181,21 @@
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
         </script>
         {% endif %}
-        <script type="application/ld+json">
-        {
-            "@context": "http://schema.org",
-            "@type": "BlogPosting",
-            "name": "{{ page.title }}",
-            "headline": "{{ page.subtitle }}",
-            "description": "{{ page.description }}",
-            "image": "{{ page.image }}",
-            "url": "{{ page.url | prepend: site.baseurl | prepend: site.url }}",
-            "articleBody": "{{ content | strip_html | xml_escape | textilize }}",
-            "wordcount": "{{ content | number_of_words }}",
-            "inLanguage": "{{ site.language }}",
-            "dateCreated": "{{ page.date | date: '%Y-%m-%d/' }}",
-            "datePublished": "{{ page.date | date: '%Y-%m-%d/' }}",
-            "dateModified": "{{ page.date | date: '%Y-%m-%d/' }}",
-            "author": {
-                "@type": "Person",
-                "name": "{{ author.display_name }}",
-                {% if author.photo %}
-                "image": "{{ author.photo }}",
-                {% else %}
-                "image": {{ "/assets/img/user.jpg" | prepend: site.baseurl | prepend: site.url }},
-                {% endif %}
-                "jobTitle": "{{ author.position }}",
-                "url": "{{ author.url | prepend: site.baseurl | prepend: site.url }}",
-                "sameAs": [
-                    {{ author_urls | split: "," | join: "," }}
-                ]
-            },
-            "publisher": {
-                "@type": "Organization",
-                "name": "{{ site.name }}",
-                "url": "{{ site.url }}{{site.baseurl}}/",
-                "logo": {
-                    "@type": "ImageObject",
-                    "url": "{{ site.url }}{{site.baseurl}}/assets/img/blog-image.png",
-                    "width": "600",
-                    "height": "315"
-                }
-            },
-            "mainEntityOfPage": "True",
-            "genre": "{{ page.category }}",
-            "articleSection": "{{ page.category }}",
-            "keywords": [{{ page.tags | join: '","' | append: '"' | prepend: '"' }}]
-        }
-        </script>
+	    
+<script type="application/ld+json">
+{"@context":"https://schema.org",
+"@type":"VideoObject",
+"description":"{{ page.title }}{{ page.description }}",
+"duration":"PT1H56M20S",
+"embedUrl":"{{ page.video }}",
+"name":"{{ page.subtitle }}",
+"thumbnailUrl":["{{ page.poster }}"],
+"uploadDate":"{{ page.date | date: '%Y-%m-%d/' }}",
+"genre":"Entertainment",
+"author":"Tentrockers"
+}
+</script>
+	   
 	    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',3762709,document.body||document.documentElement)</script>
     </body>
 </html>
