--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -188,7 +188,7 @@
 "description":"{{ page.title }}{{ page.description }}",
 "duration":"PT1H56M20S",
 "embedUrl":"{{ page.video }}",
-"name":"{{ page.subtitle }}",
+"name":"{{ page.seotitle }}",
 "thumbnailUrl":["{{ page.poster }}"],
 "uploadDate":"{{ page.date | date: '%Y-%m-%d/' }}",
 "genre":"Entertainment",
