--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,65 +108,23 @@ layout: main
 
 <script type="application/ld+json">
 {
-  "@context": "http://schema.org",
-  "@type": "WebPage",
-  "mainEntity": {
-    "@type": "Blog",
-    "name": "{{ site.name }}",
-    "headline": "{{ site.title }}",
-    "description": "{{ site.description }}",
-    "url": "{{ site.url }}{{site.baseurl}}/",
-    "inLanguage": "{{ site.language }}",
-    "isFamilyFriendly": "true",
-    "creator": {
-        "@type": "Organization",
-        "name": "{{ site.name }}",
-        "url": "{{ site.url }}{{site.baseurl}}/",
-        "sameAs": [
-            {{ social_urls | split: "," | join: "," }}
-        ]
-    },
-    "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
+
         {% assign limit = 8 %}
         {% for post in posts limit: limit %}
-            {% assign author = site.authors | where: "name", post.author | first %}
-            {
-                "@type": "BlogPosting",
-                "name": "{{ post.title }}",
-                "headline": "{{ post.subtitle }}",
-                "description": "{{ post.description }}",
-                "image": "{{ post.image }}",
-                "url": "{{ post.url | prepend: site.baseurl | prepend: site.url }}",
-                "inLanguage": "{{ site.language }}",
-                "dateCreated": "{{ post.date | date: '%Y-%m-%d/' }}",
-                "datePublished": "{{ post.date | date: '%Y-%m-%d/' }}",
-                "dateModified": "{{ post.date | date: '%Y-%m-%d/' }}",
-                "author": {
-                    "@type": "Person",
-                    "name": "{{ author.display_name }}",
-                    "url": "{{ author.url | prepend: site.baseurl | prepend: site.url }}"
-                },
-                "publisher": {
-                    "@type": "Organization",
-                    "name": "{{ site.name }}",
-                    "url": "{{ site.url }}{{site.baseurl}}/",
-                    "logo": {
-                        "@type": "ImageObject",
-                        "url": "{{ site.url }}{{site.baseurl}}/assets/img/blog-image.png",
-                        "width": "600",
-                        "height": "315"
-                    }
-                },
-                "mainEntityOfPage": "True",
-                "genre": "{{ post.category | capitalize }}",
-		        "articleSection": "{{ post.category | capitalize }}",
-                "keywords": [{{ post.tags | join: '","' | append: '"' | prepend: '"' }}]
-            }{% if forloop.last == false  %},{% endif %}
+            {"@context":"https://schema.org",
+"@type":"VideoObject",
+"description":"{{ page.title }}{{ page.description }}",
+"duration":"PT1H56M0S",
+"embedUrl":"{{ page.video }}",
+"name":"{{ page.seotitle }}",
+"thumbnailUrl":["{{ page.poster }}"],
+"uploadDate":"{{ page.date | date: '%Y-%m-%d/' }}",
+"genre":"Entertainment",
+"author":"Tentrockers"
+
+               
+            }
+	    
+	    {% if forloop.last == false  %},{% endif %}
         {% endfor %}
-        ]
-    }
-  }
-}
 </script>
