--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,41 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ site.language }}" class="no-js">
+	
     {% include head.html %}
-
+<link rel="stylesheet" href="https://hunzaboy.github.io/Ckin-Video-Player/dist/css/ckin.css"/>
     
     
    
     
     <style type="text/css">
-.rst_player{height:100%;overflow:hidden;font-family:Ruda,sans-serif;font-size:12px}
-.rst_player *{margin:0;padding:0}
-.rst_video{width:100%;background-color:#000;position:relative;overflow:hidden}
-.rst_video iframe{width:100%;height:100%;position:absolute;top:0;left:0;display:none;background-color:#000}
-.rst_server{width:100%;height:100%;position:absolute;top:0;left:0;display:none}
-.rst_server video{width:100%;height:100%;background-color:#000}
-.rst_list{width:100%;overflow:auto;background-color:#000}
-.rst_list li{list-style:none;clear:both;border:1px dashed #333;border-left:5px solid #444;overflow:hidden;cursor:pointer}
-.rst_list .selected{border-left:5px solid #3f51b5;background-color:#222222;border-right:3px solid #3f51b5}
-.rst_list .selected div h2:after{font-family:"Font Awesome 5 Free";content:"\f144";font-size:12px;font-weight:600;margin:0 0 0 5px;animation:flash 2s infinite}
-.rst_list img{float:left;width:80px;height:50px;margin:0 15px 0 0}
-.rst_list div h2{width:100%;color:#fff;font-size:120%;font-weight:400;line-height:50px;text-align:left;margin:0}
-.rst_control{width:100%;height:55px;line-height:53px;text-align:center;background:#3f3f3f;border-bottom:1px solid #1f1f1f}
-.rst_control .active{background-color:#000}
-.rst_button{background-color:#3f51b5;color:#fff;padding:8px 14px;cursor:pointer;margin:0 4px;border-radius:3px;box-shadow:0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12)}
-.rst_loading{position:absolute;text-align:center;font-size:200%;z-index:9999;display:none;width:100%;height:100%}
-.st_loading{position:absolute;top:50%;left:50%;width:20px;height:20px;transform:translate(-50%,-50%)}
-.st_loading .circlex{position:absolute;border-radius:50%;left:1px;top:1px;width:18px;height:18px;background:#fff;animation:spinVideoFirstTurn 1.5s 0s infinite both}
-.st_loading .circley{position:absolute;border-radius:50%;width:20px;height:20px;background:#3f51b5;animation:spinVideoSecondTurn 1.4s 0s infinite both}
-.rst_player i.fab.fa-google-drive, .rst_player i.fab.fa-youtube, .rst_player i.fab.fa-vimeo, .rst_player i.fab.fa-facebook, .rst_player i.fas.fa-video{background:#ffffff;width:25px;height:25px;line-height:25px;text-align:center;border-radius:100%;margin:0 5px 0 0}
-.rst_player i.fab.fa-google-drive{color:#2c9f45}
-.rst_player i.fab.fa-youtube{color:#DA5E4C}
-.rst_player i.fab.fa-vimeo{color:#1ab7ea}
-.rst_player i.fab.fa-facebook{color:#3b5998}
-.rst_player i.fas.fa-video{color:#ee8208;font-size:12px}
-@-webkit-keyframes flash{0%,100%,50%{opacity:1}25%,75%{opacity:0}}
-@keyframes flash{0%,100%,50%{opacity:1}25%,75%{opacity:0}}
-@keyframes spinVideoFirstTurn{0%,100%{box-shadow:0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5}50%{transform:rotate(180deg)}25%,75%{box-shadow:28px 0 0 #3f51b5,-28px 0 0 #3f51b5,0 28px 0 #3f51b5,0 -28px 0 #3f51b5,20px -20px 0 #3f51b5,20px 20px 0 #3f51b5,-20px -20px 0 #3f51b5,-20px 20px 0 #3f51b5}100%{transform:rotate(360deg);box-shadow:0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5}}
-@keyframes spinVideoSecondTurn{0%,100%{box-shadow:0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5}50%{transform:rotate(-180deg)}25%,75%{box-shadow:52px 0 0 #3f51b5,-52px 0 0 #3f51b5,0 52px 0 #3f51b5,0 -52px 0 #3f51b5,38px -38px 0 #3f51b5,38px 38px 0 #3f51b5,-38px -38px 0 #3f51b5,-38px 38px 0 #3f51b5;background:transparent}100%{transform:rotate(-360deg);box-shadow:0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5,0 0 0 #3f51b5}}
         .myButton {
 	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
 	background-color:#c62d1f;
@@ -62,21 +34,11 @@
 .tg th{background-color:#f38630;border-color:#aaa;border-style:solid;border-width:1px;color:#fff;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg .tg-0lax{text-align:left;vertical-align:top}
-	    .rst_videos{display:none;}
+	    
 </style>
 	
-	<script type='text/javascript'>
-//<![CDATA[
-var getPlayerOptions = {
-    playerContainer: "#videox_player",
-    playerRatio: "16:9",
-    playerMobile: "600",
-    playerDesktop: "100%",
-    playerResponsive: true
-}
-//]]>
-</script>
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
+
+  
     
     <body class="has-push-menu">
         {% include minutes-to-read.html %}
@@ -85,16 +47,10 @@ var getPlayerOptions = {
         <section class="post {% if site.two_columns_layout %}two-columns{% else %}one-column{% endif %}">
             <article role="article" class="post-content">
                 <h1 class="post-title">{{ page.seotitle}}</h1>
-                
-<div id="videox_player"/>
-<script type="text/javascript">
-//<![CDATA[
-getPlayerOptions.playerList = [
-{"file": "{{ page.video }}","title": "Server 1"},
-];
-//]]>
-</script>
-                
+
+                <video data-color="red" autoplay poster="{{ page.poster }}" src="{{ page.video }}" data-ckin="default"></video>
+
+    <script src="https://hunzaboy.github.io/Ckin-Video-Player/dist/js/ckin.js"></script>
                 <table class="tg">
 
 <tbody>
